# uva_online_judge

./: README.md
uva10008/: CMakeLists.txt  README.md  test.cpp  uva10008.cpp
uva10101/: BanglaNumbers.h  CMakeLists.txt  README.md  UVa_10101_BanglaNumbers.cpp  test.cpp
uva10191/: CMakeLists.txt  README.md  test.cpp  uva10191.cpp
uva10377/: README.md  test.cpp  uva10377.cpp
uva10954/: CMakeLists.txt  README.md  test.cpp  uva10954.cpp
uva131/: test.cpp  uva.h  uva131.cpp
uva246/: README.md  test.cpp  uva246.cpp
uva263/: CMakeLists.txt  README.md  test.cpp  uva263.cpp  uva263.h
uva445/: CMakeLists.txt  README.md  test.cpp  uva445.cpp  uva445.h
uva514/: CMakeLists.txt  README.md  test.cpp  uva514.cpp
uva608/: CMakeLists.txt  README.md  test.cpp  uva608.cpp
